<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background_FragmentScan"
    tools:context=".scannerTypes.ScannedYoutube">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId_ScannedYoutube"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#004FE8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/arrowback_from_ScannedYoutubeId"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#00004FE8"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:contentDescription="Back"
                    android:src="@drawable/arrow_back" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/ScannedYoutube_toolbarTitle"
                android:textColor="#F1F2F6"
                android:textStyle="bold"
                android:textSize="18dp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarId_ScannedYoutube">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/youtube_icon" />

                <androidx.cardview.widget.CardView
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:cardCornerRadius="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/qrCodeImageIdScannedYoutube"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_width="260dp"
                        android:contentDescription="Qr code"
                        android:layout_height="260dp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/saveButtonIdScannedYoutube"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/save_icon"
                                android:contentDescription="@string/Saved_btn"
                                app:civ_border_color="#878787"
                                app:civ_border_overlay="true"
                                app:civ_border_width="2dp" />

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/savedSuccessButtonIdScannedYoutube"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/success_copy_icon"
                                android:visibility="gone"
                                app:civ_border_color="#878787"
                                app:civ_border_width="2dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/saveTxtViewIdScannedYoutube"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/Save_btn"
                                style="@style/TextCardViewColor"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/savedSuccessTxtViewIdScannedYoutube"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/Saved_btn"
                                style="@style/TextCardViewColor"
                                android:textSize="12dp"
                                android:visibility="gone" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/moreButtonIdScannedYoutube"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:src="@drawable/more_icon"
                            app:civ_border_color="#878787"
                            app:civ_border_overlay="true"
                            android:contentDescription="@string/More"
                            app:civ_border_width="2dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/More"
                            style="@style/TextCardViewColor"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:background="#878787"
                        android:layout_width="160dp"
                        android:layout_height="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        style="@style/TextCardViewColor"
                        android:text="@string/USERNAME"
                        android:fontFamily="@font/autoradiographic"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="16dp" />
                    <View
                        android:background="#878787"
                        android:layout_width="160dp"
                        android:layout_height="1dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/ScannedYoutube_UsernameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textIsSelectable="true"
                    android:layout_marginBottom="40dp"
                    android:textColor="#878787"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15dp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/shadowFromViewId_ScannedYoutube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarId_ScannedYoutube"
        android:background="#A6000000" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:id="@+id/bottomSheetIdFrameLayoutScannedYoutube"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/bottom_sheet_background"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bar_bottom_sheep_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/openYoutubeButtonIdScannedYoutube"
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:contentDescription="@string/OpenYoutube"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/open_icon"
                        app:civ_border_color="#878787"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/OpenYoutube"
                        style="@style/TextCardViewColor"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/copyButtonIdScannedYoutube"
                            android:layout_width="59dp"
                            android:layout_height="59dp"
                            android:contentDescription="@string/CopyUsername"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/copy_icon"
                            app:civ_border_color="#878787"
                            app:civ_border_width="2dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/copiedSuccessButtonIdScannedYoutube"
                            android:layout_width="59dp"
                            android:layout_height="59dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/success_copy_icon"
                            android:visibility="gone"
                            app:civ_border_color="#878787"
                            app:civ_border_width="2dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/copyTxtViewIdScannedYoutube"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/CopyUsername"
                            style="@style/TextCardViewColor"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/copiedSuccessTxtViewIdScannedYoutube"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/CopiedSuccessfully"
                            style="@style/TextCardViewColor"
                            android:textSize="12dp"
                            android:visibility="gone" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/searchOnWebButtonIdScannedYoutube"
                        android:layout_width="59dp"
                        android:layout_height="59dp"
                        android:contentDescription="@string/SearchOnWeb"
                        android:layout_gravity="center"
                        android:src="@drawable/search_icon"
                        app:civ_border_color="#878787"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/SearchOnWeb"
                        style="@style/TextCardViewColor"
                        android:textSize="12dp" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>